dnl $Id$
dnl
dnl configure script for the /contrib subdirectory
dnl
dnl author: Wolfgang Bangerth, 2000
dnl


define([AC_CACHE_LOAD], )dnl
define([AC_CACHE_SAVE], )dnl
AC_REVISION($Revision$)
AC_INIT(config)

dnl Have the auxiliary tools like config.guess etc in contrib/config
AC_CONFIG_AUX_DIR(config)


AC_MSG_RESULT()
AC_MSG_RESULT(---------------- configuring contrib subdir -----------------)


dnl    Set the path to the deal.II/contrib directory
DEAL2_CONTRIB_DIR=`pwd`



dnl -------------------------------------------------------------
dnl Other subdirectories
dnl -------------------------------------------------------------

AC_CONFIG_SUBDIRS(utilities)


dnl -------------------------------------------------------------
dnl Output results
dnl -------------------------------------------------------------

AC_OUTPUT(Makefile)
